New dashboard home page
  - New layout and more information displayed on home page
  - New `metrics.service` for the logic shared between account home and dashboard home around chart data
  - Improve line charts
    - add unit on y-axis
    - remove first grid line which was cut on top of the chart
    - display the y-axis text on top of grid lines

--- a/apps/dashboard/src/app/account/account-home/account-home.component.html
+++ b/apps/dashboard/src/app/account/account-home/account-home.component.html
@@ -1,114 +1,118 @@
 <div class="account-home page-spacing">
   <div class="container-row">
-    <div
-      class="processing-stats"
-      *ngIf="isSubscribed | async">
-      <app-usage-table [usage]="usage | async"></app-usage-table>
-    </div>
-    <div
-      class="processing-stats"
-      *ngIf="!(isSubscribed | async)">
-      <div class="consumption-header">
-        <div>
-          <h2>{{ 'account.monthly_consumibles' | translate }}</h2>
-          <div>{{ 'account.accumulated_consumption' | translate }}</div>
-        </div>
-        <pa-button
-          (click)="toggleCharts()"
-          [icon]="allCharts ? 'chevron-up' : 'chevron-down'"
-          aspect="basic"></pa-button>
+    @if (isSubscribed | async) {
+      <div class="processing-stats">
+        <app-usage-table [usage]="usage | async"></app-usage-table>
       </div>
-      <div
-        class="chart-container"
-        *ngFor="let statType of allCharts ? statsTypes : [statsTypes[0]]">
-        <div class="chart-header">
-          <div class="title-m">{{ 'account.chart_' + statType | translate }}</div>
-          <div class="chart-legend">
-            <div class="line"></div>
-            <div class="body-xs">{{ 'account.threshold' | translate }}</div>
+    } @else {
+      <div class="processing-stats">
+        <div class="consumption-header">
+          <div>
+            <h2>{{ 'account.monthly_consumibles' | translate }}</h2>
+            <div>{{ 'account.accumulated_consumption' | translate }}</div>
           </div>
+          <pa-button
+            (click)="toggleCharts()"
+            [icon]="allCharts ? 'chevron-up' : 'chevron-down'"
+            aspect="basic"></pa-button>
         </div>
-        <app-line-chart
-          *ngIf="charts[statType] | async as chart"
-          [data]="chart.data"
-          [xDomain]="chart.domain"
-          [yDomain]="{ min: 0 }"
-          [threshold]="chart.threshold"
-          [height]="260"
-          [area]="true"></app-line-chart>
-      </div>
-    </div>
 
-    <div
-      class="processing-stats"
-      *ngIf="showPending">
-      <section class="chart-container">
-        <div class="chart-header">
-          <div class="range-container">
-            <nsi-dropdown-button
-              size="small"
-              kind="inverted"
-              [popupRef]="range">
-              {{ 'account.chart_range_label' | translate: { hours: pendingRange.value } }}
-            </nsi-dropdown-button>
-            <pa-dropdown #range>
-              <pa-option
-                value="1h"
-                [selected]="pendingRange.value === statsRange.anHour"
-                (selectOption)="pendingRange.next(statsRange.anHour)">
-                {{ statsRange.anHour }}
-              </pa-option>
-              <pa-option
-                value="2h"
-                [selected]="pendingRange.value === statsRange.twoHours"
-                (selectOption)="pendingRange.next(statsRange.twoHours)">
-                {{ statsRange.twoHours }}
-              </pa-option>
-              <pa-option
-                value="3h"
-                [selected]="pendingRange.value === statsRange.threeHours"
-                (selectOption)="pendingRange.next(statsRange.threeHours)">
-                {{ statsRange.threeHours }}
-              </pa-option>
-              <pa-option
-                value="6h"
-                [selected]="pendingRange.value === statsRange.sixHours"
-                (selectOption)="pendingRange.next(statsRange.sixHours)">
-                {{ statsRange.sixHours }}
-              </pa-option>
-              <pa-option
-                value="12h"
-                [selected]="pendingRange.value === statsRange.twelveHours"
-                (selectOption)="pendingRange.next(statsRange.twelveHours)">
-                {{ statsRange.twelveHours }}
-              </pa-option>
-              <pa-option
-                value="24h"
-                [selected]="pendingRange.value === statsRange.twentyFourHours"
-                (selectOption)="pendingRange.next(statsRange.twentyFourHours)">
-                {{ statsRange.twentyFourHours }}
-              </pa-option>
-              <pa-option
-                value="48h"
-                [selected]="pendingRange.value === statsRange.fortyHeightHours"
-                (selectOption)="pendingRange.next(statsRange.fortyHeightHours)">
-                {{ statsRange.fortyHeightHours }}
-              </pa-option>
-            </pa-dropdown>
+        @for (statType of allCharts ? statsTypes : [statsTypes[0]]; track statType) {
+          <div class="chart-container">
+            <div class="chart-header">
+              <div class="title-m">{{ 'account.chart_' + statType | translate }}</div>
+              <div class="chart-legend">
+                <div class="line"></div>
+                <div class="body-xs">{{ 'account.threshold' | translate }}</div>
+              </div>
+            </div>
+            @if (charts[statType] | async; as chart) {
+              <app-line-chart
+                area
+                tooltipsEnabled
+                [data]="chart.data"
+                [xDomain]="chart.domain"
+                [yDomain]="{ min: 0 }"
+                [threshold]="chart.threshold"
+                [yUnit]="chart.yUnit | translate"
+                [xAxisTickOptions]="{ modulo: 2 }"
+                [height]="260"></app-line-chart>
+            }
           </div>
-          <span class="chart-message">{{ 'account.chart_number_resources' | translate }}</span>
-        </div>
-        <app-line-chart
-          [data]="(pending | async) || []"
-          [xAxisTickOptions]="pendingTickOptions | async"
-          [tooltipsEnabled]="true"></app-line-chart>
-      </section>
-    </div>
+        }
+      </div>
+    }
+
+    @if (showPending) {
+      <div class="processing-stats">
+        <section class="chart-container">
+          <div class="chart-header">
+            <div class="range-container">
+              <nsi-dropdown-button
+                size="small"
+                kind="inverted"
+                [popupRef]="range">
+                {{ 'account.chart_range_label' | translate: { hours: pendingRange.value } }}
+              </nsi-dropdown-button>
+              <pa-dropdown #range>
+                <pa-option
+                  value="1h"
+                  [selected]="pendingRange.value === statsRange.anHour"
+                  (selectOption)="pendingRange.next(statsRange.anHour)">
+                  {{ statsRange.anHour }}
+                </pa-option>
+                <pa-option
+                  value="2h"
+                  [selected]="pendingRange.value === statsRange.twoHours"
+                  (selectOption)="pendingRange.next(statsRange.twoHours)">
+                  {{ statsRange.twoHours }}
+                </pa-option>
+                <pa-option
+                  value="3h"
+                  [selected]="pendingRange.value === statsRange.threeHours"
+                  (selectOption)="pendingRange.next(statsRange.threeHours)">
+                  {{ statsRange.threeHours }}
+                </pa-option>
+                <pa-option
+                  value="6h"
+                  [selected]="pendingRange.value === statsRange.sixHours"
+                  (selectOption)="pendingRange.next(statsRange.sixHours)">
+                  {{ statsRange.sixHours }}
+                </pa-option>
+                <pa-option
+                  value="12h"
+                  [selected]="pendingRange.value === statsRange.twelveHours"
+                  (selectOption)="pendingRange.next(statsRange.twelveHours)">
+                  {{ statsRange.twelveHours }}
+                </pa-option>
+                <pa-option
+                  value="24h"
+                  [selected]="pendingRange.value === statsRange.twentyFourHours"
+                  (selectOption)="pendingRange.next(statsRange.twentyFourHours)">
+                  {{ statsRange.twentyFourHours }}
+                </pa-option>
+                <pa-option
+                  value="48h"
+                  [selected]="pendingRange.value === statsRange.fortyHeightHours"
+                  (selectOption)="pendingRange.next(statsRange.fortyHeightHours)">
+                  {{ statsRange.fortyHeightHours }}
+                </pa-option>
+              </pa-dropdown>
+            </div>
+            <span class="chart-message">{{ 'account.chart_number_resources' | translate }}</span>
+          </div>
+          <app-line-chart
+            [data]="(pending | async) || []"
+            [xAxisTickOptions]="pendingTickOptions | async"
+            [tooltipsEnabled]="true"></app-line-chart>
+        </section>
+      </div>
+    }
 
     <div class="right-column">
-      <div *ngIf="canUpgrade | async">
+      @if (canUpgrade | async) {
         <app-account-status></app-account-status>
-      </div>
+      }
       <div>
         <div class="title-s">{{ 'account.knowledgeboxes' | translate }}</div>
         @if (account$ | async; as account) {
