--- a/libs/common/src/lib/navbar/navbar.component.html
+++ b/libs/common/src/lib/navbar/navbar.component.html
@@ -12,7 +12,7 @@
             data-cy="go-to-home"
             [routerLinkActiveOptions]="{ exact: true }">
             <pa-icon name="home"></pa-icon>
-            <span class="nav-link-title">{{ 'stash.home.link' | translate }}</span>
+            <span class="nav-link-title">{{ 'sidenav.home' | translate }}</span>
           </a>
         </div>
       </div>
